# differential_geometry

./: .gitignore  main.py  pyproject.toml
PoissonMesh/: laplace_beltrami_operator.py  math_utils.py  render_utils.py
